; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ssb/extr_pcmcia.c_ssb_pcmcia_write32.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ssb/extr_pcmcia.c_ssb_pcmcia_write32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssb_device = type { %struct.ssb_bus* }
%struct.ssb_bus = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ssb_device*, i64, i32)* @ssb_pcmcia_write32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ssb_pcmcia_write32(%struct.ssb_device* %0, i64 %1, i32 %2) #0 {
  %4 = alloca %struct.ssb_device*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.ssb_bus*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.ssb_device* %0, %struct.ssb_device** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load %struct.ssb_device*, %struct.ssb_device** %4, align 8
  %11 = getelementptr inbounds %struct.ssb_device, %struct.ssb_device* %10, i32 0, i32 0
  %12 = load %struct.ssb_bus*, %struct.ssb_bus** %11, align 8
  store %struct.ssb_bus* %12, %struct.ssb_bus** %7, align 8
  %13 = load %struct.ssb_bus*, %struct.ssb_bus** %7, align 8
  %14 = getelementptr inbounds %struct.ssb_bus, %struct.ssb_bus* %13, i32 0, i32 0
  %15 = load i64, i64* %8, align 8
  %16 = call i32 @spin_lock_irqsave(i32* %14, i64 %15)
  %17 = load %struct.ssb_device*, %struct.ssb_device** %4, align 8
  %18 = call i32 @select_core_and_segment(%struct.ssb_device* %17, i64* %5)
  store i32 %18, i32* %9, align 4
  %19 = load i32, i32* %9, align 4
  %20 = icmp ne i32 %19, 0
  %21 = xor i1 %20, true
  %22 = zext i1 %21 to i32
  %23 = call i64 @likely(i32 %22)
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %44

25:                                               ; preds = %3
  %26 = load i32, i32* %6, align 4
  %27 = and i32 %26, 65535
  %28 = load %struct.ssb_bus*, %struct.ssb_bus** %7, align 8
  %29 = getelementptr inbounds %struct.ssb_bus, %struct.ssb_bus* %28, i32 0, i32 1
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* %5, align 8
  %32 = add nsw i64 %30, %31
  %33 = call i32 @writew(i32 %27, i64 %32)
  %34 = load i32, i32* %6, align 4
  %35 = and i32 %34, -65536
  %36 = lshr i32 %35, 16
  %37 = load %struct.ssb_bus*, %struct.ssb_bus** %7, align 8
  %38 = getelementptr inbounds %struct.ssb_bus, %struct.ssb_bus* %37, i32 0, i32 1
  %39 = load i64, i64* %38, align 8
  %40 = load i64, i64* %5, align 8
  %41 = add nsw i64 %39, %40
  %42 = add nsw i64 %41, 2
  %43 = call i32 @writew(i32 %36, i64 %42)
  br label %44

44:                                               ; preds = %25, %3
  %45 = call i32 (...) @mmiowb()
  %46 = load %struct.ssb_bus*, %struct.ssb_bus** %7, align 8
  %47 = getelementptr inbounds %struct.ssb_bus, %struct.ssb_bus* %46, i32 0, i32 0
  %48 = load i64, i64* %8, align 8
  %49 = call i32 @spin_unlock_irqrestore(i32* %47, i64 %48)
  ret void
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @select_core_and_segment(%struct.ssb_device*, i64*) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @writew(i32, i64) #1

declare dso_local i32 @mmiowb(...) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
